# llm-docker

./: .builder-api.toml  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  TODO.md  cld  docker-compose.yml  docker-entrypoint.sh  install.sh  ocd  pro_llm.applescript  setup.sh  sshd_config
.claude/: settings.local.backup  settings.local.json
.claude/agents/: TEST_WRITER.md
.claude/commands/: AGENTS_LOOPS_EXTENSION.md  BUILD.md  CHECK.md  GIT.md  PLAN.md  PRIME.md  REPRODUCE.md  REVIEW.md  SCOUT.md  YAY.md
api_config/: builder-api.toml  llm-docker.toml  purpletech.toml  slav-ai.toml
docs/: 00-LLM-DOCKER.md  SETUP-PROJECT-API.md
docs/anthropic/: HACKS.md  README.md
docs/opencode/: README.md  cli.md  commands.md  config.md  index.md  keybinds.md  models.md  modes.md  plugins.md  providers.md  rules.md
docs/tmux/: README.md
plans/: 01-safety-dedup.md
scripts/ci/: check-modules.sh  check-py.sh  check-size.sh  (+1 more)
src/: .env.example  .mcp.python.sample  Dockerfile  cld  cld-status  cld-verbose  cld.run.sh  install.sh  install_test.sh  llm-container-claude-settings.json  llm-container-opencode-config.jsonc  llm-docker.conf  multi-llm-docker.applescript  ocd  ocd.run.sh  setup.sh  smoke_test.sh
src/examples/python-example/: .env.example  .gitignore  .mcp.json  README.md  pyproject.toml
src/examples/python-example/scripts/mcp/logs-server/: index.js  package.json
src/examples/python-example/scripts/mcp/ops-server/: index.js
src/examples/python-example/src/python_example/: main.py
src/examples/python-example/tests/: test_main.py
(+105 files in other folders)
